fix home form/video button alignment for large screens

--- a/app/styles/view-specific/creator/landing-page/_landing-page.scss
+++ b/app/styles/view-specific/creator/landing-page/_landing-page.scss
@@ -88,6 +88,9 @@ $html-name-space:'.page-landing';
       }
     }
   }
+  .btn-video .fa {
+    margin-right:8px;
+  }
 
 
 
